# geoquetzal

./: .gitignore  CNAME  LICENSE  README.es.md  README.md  pyproject.toml
docs/: CNAME  acerca_de.html  custom.css  fuentes.html  robots.txt  search.json  sitemap.xml
docs/api/: referencia-r.html  referencia.html
docs/ejemplos/: censo.html  mapas.html  otros_datos_mapas.html
docs/en/: about.html  sources.html
docs/en/api/: reference-r.html  reference.html
docs/en/examples/: census.html  maps.html  other_data_maps.html
docs/index_files/libs/bootstrap/: bootstrap-08e8fae1a2712dc217a8c62d444be44e.min.css
geoquetzal/: __init__.py  _lookup.py  cache.py  crs.py  emigracion.py  geography.py  hogares.py  lugares_poblados.py  personas.py  plotting.py  vivienda.py  voronoi.py
geoquetzal/data/: catalogo_municipios.csv
scripts/: convert_emigracion_to_parquet.py
