[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoquetzal"
version = "1.0.3"
description = "Geographic and census data for Guatemala — the tigris equivalent for Guatemalan researchers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Jorge Yass"},
    {name = "Anasilvia Salazar"},
]
keywords = [
    "guatemala", "gis", "geography", "census", "geospatial",
    "departamentos", "municipios", "INE", "GADM", "mapping",
    "migration", "central-america", "choropleth", "parquet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geopandas>=0.12",
    "pandas>=1.5",
    "requests>=2.28",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
plotting = [
    "folium>=0.14",
    "matplotlib>=3.6",
    "mapclassify>=2.5",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]
all = [
    "geoquetzal[plotting]",
    "contextily>=1.3",
]

[project.urls]
Homepage = "https://github.com/geoquetzal/geoquetzal"
Repository = "https://github.com/geoquetzal/geoquetzal"
Issues = "https://github.com/geoquetzal/geoquetzal/issues"
"Census Data" = "https://github.com/geoquetzal/censo2018/releases"

[tool.setuptools.packages.find]
include = ["geoquetzal*"]

[tool.setuptools.package-data]
geoquetzal = ["data/*.csv", "data/*.json"]
